src/objects/PSA_Billing_Stage__c.object
<CustomObject>
    <description>The PSA Billing Stage object will be accessed by the Invoice Application integration for updates needed to billing events, including Integration Status and invoice information.</description>
    <fields>
        <fullName>PSA_Billing_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of related Billing Event</description>
        <label>Billing Event</label>
        <referenceTo>pse__Billing_Event__c</referenceTo>
        <relationshipLabel>PSA Billing Stage</relationshipLabel>
        <relationshipName>PSA_Billing_Stage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_GW_Integration_Id__c</fullName>
        <description>Source Id used to uniquely identify the associated source system record</description>
        <label>GW Integration Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Integration_Status__c</fullName>
        <description>An Integration Status value to set on the billing event. Valid values include: Processing Invoice, Error, and Complete</description>
        <label>Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSA_Invoice_Date__c</fullName>
        <description>Will not be used by the integration initially, since the invoice date will be set in PSA. Placeholder in case invoice date is ever to be supplied from the Accounting Application (originally Intacct)</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Invoice_Number__c</fullName>
        <description>The integration to mark the billing event as invoiced should set this to the Intacct invoice number</description>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Invoicing_Error_Message__c</fullName>
        <label>Invoicing Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSA_Processed_Date__c</fullName>
        <label>Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSA_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>PSA Billing Stage</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Billing_Event__c</columns>
        <columns>PSA_Integration_Status__c</columns>
        <columns>PSA_Invoice_Date__c</columns>
        <columns>PSA_Invoice_Number__c</columns>
        <columns>PSA_GW_Integration_Id__c</columns>
        <columns>PSA_Invoicing_Error_Message__c</columns>
        <columns>PSA_Processed__c</columns>
        <columns>PSA_Processed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BS-{00000}</displayFormat>
        <label>Billing Stage Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Billing Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>